test/asm/double-purge.err
error: double-purge.asm(3):
    'n' was already purged
Assembly aborted with 1 error!
