test/asm/double-purge.asm
def n equ 42
purge n
purge n
